feat: add type to client
