# app/MoonShine/Resources/ClientResource.php
@@ -8,7 +8,9 @@ use Illuminate\Database\Eloquent\Model;
 use App\Models\Client;
 
 use MoonShine\Fields\File;
+use MoonShine\Fields\Image;
 use MoonShine\Fields\Relationships\BelongsTo;
+use MoonShine\Fields\Select;
 use MoonShine\Fields\Switcher;
 use MoonShine\Fields\Text;
 use MoonShine\Fields\Textarea;
@@ -17,6 +19,34 @@ use MoonShine\Handlers\ImportHandler;
 use MoonShine\Resources\ModelResource;
 use MoonShine\Decorations\Block;
 use MoonShine\Fields\ID;
+
+const DEPARTAMENTOS = [
+    'Amazonas' => 'Amazonas',
+    'Áncash' => 'Áncash',
+    'Apurímac' => 'Apurímac',
+    'Arequipa' => 'Arequipa',
+    'Ayacucho' => 'Ayacucho',
+    'Cajamarca' => 'Cajamarca',
+    'Callao' => 'Callao',
+    'Cusco' => 'Cusco',
+    'Huancavelica' => 'Huancavelica',
+    'Huánuco' => 'Huánuco',
+    'Ica' => 'Ica',
+    'Junín' => 'Junín',
+    'La Libertad' => 'La Libertad',
+    'Lambayeque' => 'Lambayeque',
+    'Lima' => 'Lima',
+    'Loreto' => 'Loreto',
+    'Madre de Dios' => 'Madre de Dios',
+    'Moquegua' => 'Moquegua',
+    'Pasco' => 'Pasco',
+    'Piura' => 'Piura',
+    'Puno' => 'Puno',
+    'San Martín' => 'San Martín',
+    'Tacna' => 'Tacna',
+    'Tumbes' => 'Tumbes',
+    'Ucayali' => 'Ucayali',
+];
 
 class ClientResource extends ModelResource
 {
@@ -37,7 +67,14 @@ class ClientResource extends ModelResource
     public function filters(): array
     {
         return [
-            BelongsTo::make('Producto', 'product', fn($item) => "$item->name")->required()->searchable(),
+            BelongsTo::make('Tipos', 'type', fn($item) => "$item->name - {$item->product['name']}")->required()->searchable(),
+//            departamento
+            Select::make('Departamento', 'departamento')
+                ->options(DEPARTAMENTOS)
+                ->searchable()
+                ->multiple()
+                ->placeholder('Seleccionar departamento'),
+
         ];
     }
 
@@ -46,11 +83,35 @@ class ClientResource extends ModelResource
         return [
             Block::make([
                 ID::make()->hideOnIndex(),
-                Switcher::make('Activo', 'active'),
-                BelongsTo::make('Producto', 'product', fn($item) => "$item->name")->required()->searchable(),
+                Switcher::make('Activo', 'active')->default(true),
+                BelongsTo::make('Tipo', 'type', fn($item) => $item && $item->product ? "$item->name - {$item->product['name']}" : "$item->name")->required()->searchable(),
                 Text::make('Nombre', 'nombre')->required(),
                 Text::make('Dirección', 'direccion')->required()->hideOnIndex(),
-                File::make('Logo', 'logo')
+//                File::make('Logo', 'logo')
+//                    ->removable()
+//                    ->dir('clientes')
+//                    ->allowedExtensions(['png', 'jpg', 'jpeg', 'svg'])
+//                    ->keepOriginalFileName(),
+                Image::make('Logo', 'logo')
+                    ->removable()
+                    ->dir('clientes')
+                    ->allowedExtensions(['png', 'jpg', 'jpeg', 'svg'])
+                    ->keepOriginalFileName(),
+                Select::make('Departamento', 'departamento')
+                    ->options(DEPARTAMENTOS)->required(),
+                Image::make('Imagen de referencia', 'imagen_referencia')
+                    ->removable()
+                    ->dir('clientes')
+                    ->allowedExtensions(['png', 'jpg', 'jpeg', 'svg'])
+                    ->keepOriginalFileName(),
+
+                Image::make('Flyer de bienvenida', 'flyer_bienvenida')
+                    ->removable()
+                    ->dir('clientes')
+                    ->allowedExtensions(['png', 'jpg', 'jpeg', 'svg'])
+                    ->keepOriginalFileName(),
+
+                Image::make('Flyer informativo', 'flyer_informativo')
                     ->removable()
                     ->dir('clientes')
                     ->allowedExtensions(['png', 'jpg', 'jpeg', 'svg'])
@@ -64,6 +125,10 @@ class ClientResource extends ModelResource
     {
         return [
             'logo' => ['nullable', 'image', 'max:130'],
+            'departamento' => ['required'],
+            'imagen_referencia' => ['nullable', 'image', 'max:130'],
+            'flyer_bienvenida' => ['nullable', 'image', 'max:130'],
+            'flyer_informativo' => ['nullable', 'image', 'max:130'],
         ];
     }
 
